--- a/test-output/ExtentReport.html
+++ b/test-output/ExtentReport.html
@@ -53,7 +53,7 @@
 					<i class='mdi-hardware-desktop-windows'></i>
 				</li>
 				<li>
-					<span class='suite-started-time'>2020-04-12 19:04:38</span>
+					<span class='suite-started-time'>2020-04-12 23:36:38</span>
 				</li>
 				<li>
 					<span>v2.41.1</span>
@@ -83,25 +83,25 @@
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-current'> 
 							<span class='panel-name'>Total Time Taken (Current Run)</span> 
-							<span class='suite-total-time-current-value panel-lead'>0h 0m 31s+791ms</span> 
+							<span class='suite-total-time-current-value panel-lead'>0h 2m 42s+639ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-overall'> 
 							<span class='panel-name'>Total Time Taken (Overall)</span> 
-							<span class='suite-total-time-overall-value panel-lead'>0h 0m 31s+791ms</span> 
+							<span class='suite-total-time-overall-value panel-lead'>0h 2m 42s+639ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-start-time'>
 						<div class='card accent green-accent'> 
 							<span class='panel-name'>Start</span> 
-							<span class='panel-lead suite-started-time'>2020-04-12 19:04:06</span> 
+							<span class='panel-lead suite-started-time'>2020-04-12 23:33:55</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-end-time'>
 						<div class='card accent pink-accent'> 
 							<span class='panel-name'>End</span> 
-							<span class='panel-lead suite-ended-time'>2020-04-12 19:04:38</span> 
+							<span class='panel-lead suite-ended-time'>2020-04-12 23:36:38</span> 
 						</div> 
 					</div>
 				</div>
@@ -249,17 +249,17 @@
 						<div class='card-panel no-padding-h no-padding-v no-margin-v'>
 							<div class='wrapper'>
 								<ul id='test-collection' class='test-collection'>
-										<li class='collection-item test displayed active fail ' extentid='8ee18e6f-4242-4ee9-8b9c-d969db3d9718'>
+										<li class='collection-item test displayed active pass ' extentid='4d381159-6dae-427d-8ba7-0bbcceebedaf'>
 											<div class='test-head'>
 												<span class='test-name'>verifyTitle </span>
-												<span class='test-status label right outline capitalize fail'>fail</span>
+												<span class='test-status label right outline capitalize pass'>pass</span>
 												<span class='category-assigned hide '></span>
 											</div>
 											<div class='test-body'>
 												<div class='test-info'>
-													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2020-04-12 19:04:32</span>
-													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2020-04-12 19:04:35</span>
-													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 2s+748ms</span>
+													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2020-04-12 23:36:19</span>
+													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2020-04-12 23:36:30</span>
+													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 11s+302ms</span>
 												</div>
 												<div class='test-desc'></div>
 												<div class='test-attributes'>
@@ -275,19 +275,19 @@
 														</thead>
 														<tbody>
 																<tr>
-																	<td class='status fail' title='fail' alt='fail'><i class='mdi-navigation-cancel'></i></td>
-																	<td class='timestamp'>19:04:32</td>
-																	<td class='step-details'>Test Failed for verifyTitle</td>
+																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
+																	<td class='timestamp'>23:36:30</td>
+																	<td class='step-details'>Test Passed for verifyTitle</td>
 																</tr>
 																<tr>
-																	<td class='status fail' title='fail' alt='fail'><i class='mdi-navigation-cancel'></i></td>
-																	<td class='timestamp'>19:04:32</td>
-																	<td class='step-details'>Test Failed for java.lang.AssertionError: expected [wrongtitle] but found [CRMPRO - CRM software for customer relationship management, sales, and support.]</td>
+																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
+																	<td class='timestamp'>23:36:30</td>
+																	<td class='step-details'>Test Passed for null</td>
 																</tr>
 																<tr>
-																	<td class='status fail' title='fail' alt='fail'><i class='mdi-navigation-cancel'></i></td>
-																	<td class='timestamp'>19:04:35</td>
-																	<td class='step-details'><a href='C:\Users\Lalitha\eclipse-workspace\ExtentReportScreenShot/screenshots/verifyTitle20200412070432.png' data-featherlight='image'><img class='report-img' src='file:///C:\Users\Lalitha\eclipse-workspace\ExtentReportScreenShot/screenshots/verifyTitle20200412070432.png' /></a></td>
+																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
+																	<td class='timestamp'>23:36:30</td>
+																	<td class='step-details'><a href='C:\Users\Lalitha\eclipse-workspace\ExtentReportScreenShot/screenshots/verifyTitle20203612113620.png' data-featherlight='image'><img class='report-img' src='file:///C:\Users\Lalitha\eclipse-workspace\ExtentReportScreenShot/screenshots/verifyTitle20203612113620.png' /></a></td>
 																</tr>
 														</tbody>
 													</table>
