--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,14 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b66870">  <td>20/04/12 19:04:36</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;AppTest.afterTest()[pri:0, instance:ExtentReportScreenShot.Test.AppTest@3532ec19]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1596000437</td>   <td></td> </tr>
-<tr bgcolor="b66870">  <td>20/04/12 19:04:32</td>   <td>-3928</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AppTest.clostest(org.testng.ITestResult)[pri:0, instance:ExtentReportScreenShot.Test.AppTest@3532ec19]">&lt;&lt;clostest</td> 
-<td>&nbsp;</td>  <td>main@1596000437</td>   <td></td> </tr>
-<tr bgcolor="b66870">  <td>20/04/12 19:04:06</td>   <td>-30251</td> <td>&nbsp;</td><td title="&gt;&gt;AppTest.report()[pri:0, instance:ExtentReportScreenShot.Test.AppTest@3532ec19]">&gt;&gt;report</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1596000437</td>   <td></td> </tr>
-<tr bgcolor="b66870">  <td>20/04/12 19:04:07</td>   <td>-29491</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AppTest.setup()[pri:0, instance:ExtentReportScreenShot.Test.AppTest@3532ec19]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@1596000437</td>   <td></td> </tr>
-<tr bgcolor="b66870">  <td>20/04/12 19:04:32</td>   <td>-4088</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AppTest.verifyTitle()[pri:0, instance:ExtentReportScreenShot.Test.AppTest@3532ec19]">verifyTitle</td> 
-  <td>main@1596000437</td>   <td></td> </tr>
+<tr bgcolor="a57a9b">  <td>20/04/12 23:36:32</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;AppTest.afterTest()[pri:0, instance:ExtentReportScreenShot.Test.AppTest@3632be31]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1232306490</td>   <td></td> </tr>
+<tr bgcolor="a57a9b">  <td>20/04/12 23:36:20</td>   <td>-12282</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AppTest.clostest(org.testng.ITestResult)[pri:0, instance:ExtentReportScreenShot.Test.AppTest@3632be31]">&lt;&lt;clostest</td> 
+<td>&nbsp;</td>  <td>main@1232306490</td>   <td></td> </tr>
+<tr bgcolor="a57a9b">  <td>20/04/12 23:33:55</td>   <td>-156920</td> <td>&nbsp;</td><td title="&gt;&gt;AppTest.report()[pri:0, instance:ExtentReportScreenShot.Test.AppTest@3632be31]">&gt;&gt;report</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1232306490</td>   <td></td> </tr>
+<tr bgcolor="a57a9b">  <td>20/04/12 23:33:56</td>   <td>-156009</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AppTest.setup()[pri:0, instance:ExtentReportScreenShot.Test.AppTest@3632be31]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1232306490</td>   <td></td> </tr>
+<tr bgcolor="a57a9b">  <td>20/04/12 23:36:19</td>   <td>-13124</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AppTest.verifyTitle()[pri:0, instance:ExtentReportScreenShot.Test.AppTest@3632be31]">verifyTitle</td> 
+  <td>main@1232306490</td>   <td></td> </tr>
 </table>
